# GraduationProject-KukaNeedleAccurateInsertion

./: README.md
kuka_kr6/: CMakeLists.txt  CMakeLists.txt~  package.xml
kuka_kr6/launch/: kuka_kr6_control.launch  kuka_kr6_control.launch~  kuka_kr6_urdf_view.launch  kuka_kr6_urdf_view.launch~  kuka_kr6_urdf_view.rviz  move_group_interface_tutorial.launch
kuka_kr6/robots/: .gitignore  base_link.STL  base_link_collision.STL  base_link_collision_reduced.STL  kuka_kr6_description.urdf  kuka_kr6_description.urdf~  kuka_kr6_description_mesh.urdf  kuka_kr6_description_mesh.urdf~  kuka_kr6_description_mesh_noword.urdf  kuka_kr6_description_mesh_noword.urdf~  kuka_kr6_description_mesh_noword.xacro  kuka_kr6_needle.urdf  kuka_kr6_needle_test.urdf  link1.STL  link1_collision.STL  link1_collision_reduced.STL  link2.STL  link2_collision.STL  link2_collision_reduced.STL  link2_word.STL  link3.STL  link3_collision.STL  link3_collision_reduced.STL  link4.STL  link4_collision.STL  link4_collision_reduced.STL  link4_word.STL  link5.STL  link5_collision.STL  link5_collision_reduced.STL  link6.STL  link6_collision.STL  link6_collision_reduced.STL  needle_container.STL  needle_container_collision.STL  table.xacro  workcell.urdf  workcell.xacro
kuka_kr6_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
kuka_kr6_moveit_config/config/: controllers.yaml  controllers.yaml~  fake_controllers.yaml  joint_names.yaml  kinematics.yaml  kuka_kr6.srdf  ompl_planning.yaml
kuka_kr6_moveit_config/launch/: default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  kuka_kr6_moveit_controller_manager.launch.xml  move_group.launch  moveit.rviz  moveit_planning_execution.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch  warehouse_settings.launch.xml
robot_driver_interface/: CMakeLists.txt  package.xml
robot_driver_interface/launch/: kuka_robot_interface.launch
robot_driver_interface/src/: EulerQuaternionConversion.cpp  EulerQuaternionConversion.h  Interface.cpp  Interface.h  KukaFeedback.cpp  KukaFeedback.h  MotionPlanDecision.cpp  MotionPlanDecision.h  controller.cpp  controller.h  main.cpp
robot_driver_interface/src/common/: ROSThread.cpp  ROSThread.h  WaitForExecution.cpp  WaitForExecution.h  WaitForIndicatorPlaced.cpp  WaitForIndicatorPlaced.h  geometry.cpp  geometry.h  message.cpp  message.h  plannar.cpp  plannar.cpp.autosave  plannar.h  tcpthread.cpp  tcpthread.h
robot_driver_interface/src/gui/: .gitignore  RobotInterface.ui  krc4_control_async_gui.cpp  krc4_control_async_gui.h  krc4_control_async_gui.ui  robotInterface.ui  robotInterface_COMPortSettings.ui  robotInterface_COMPortTimeOut.ui  robotInterface_IlluminatorFiringRate.ui  robotInterface_MotionPlanDecision.ui  robotInterface_NewAlertFlags.ui  robotInterface_ProgramOptions.ui  robotInterface_ROMFile.ui  robotInterface_SystemFeatures.ui  robotInterface_WaitForExecution.ui  robotInterface_WaitForIndicatorPlaced.ui  ui_RobotInterface.h  ui_robotInterface.h  ui_robotInterface_COMPortSettings.h  ui_robotInterface_COMPortTimeOut.h  ui_robotInterface_IlluminatorFiringRate.h  ui_robotInterface_MotionPlanDecision.h  ui_robotInterface_NewAlertFlags.h  ui_robotInterface_ProgramOptions.h  ui_robotInterface_ROMFile.h  ui_robotInterface_SystemFeatures.h  ui_robotInterface_WaitForExecution.h  ui_robotInterface_WaitForIndicatorPlaced.h
robot_driver_interface/src/gui/older version/: .gitignore
robot_driver_interface/src/ndi/: APIStructures.h  COMPortSettings.cpp  COMPortSettings.h  COMPortTimeOut.cpp  COMPortTimeOut.h  Comm32Port.cpp  Comm32Port.h  CommandHandling.cpp  CommandHandling.h  Conversions.cpp  Conversions.h  IlluminatorFiringRate.cpp  IlluminatorFiringRate.h  NewAlertFlagsDlg.cpp  NewAlertFlagsDlg.h  ProgramOptions.cpp  ProgramOptions.h  ROMFileDlg.cpp  ROMFileDlg.h  SystemFeaturesDlg.cpp  SystemFeaturesDlg.h  inifile.cpp  inifile.h
robot_driver_interface/src/plot/: main_plot.cpp  plot.cpp  plot.h  plot.ui  qcustomplot.cpp  qcustomplot.h
